log/build_2021-09-13_14-41-52/JNode_KeyboardInput/stderr.log
  File "/home/spacecal/SpaceCal/install/JNode_KeyboardInput/lib/python3.8/site-packages/JNode_KeyboardInput/keyInputNode.py", line 34
    msg.data = (String)key.char
                       ^
SyntaxError: invalid syntax

